pour diego le con

--- a/index.html
+++ b/index.html
@@ -77,3 +77,7 @@
                        </div>
 
             </section>
+            <script src="public/styles/javascript.js"></script>
+
+        </body>
+    </html>
