--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
             </nav>
 
-            <section id="tuiles">
-            </section>
+            <section id="tuiles">   </section>
             <script src="public/styles/javascript.js"></script>
 
         </body>
